# esteid

./: plugin-config.html
SmartCardRemoval/trunk/: CMakeLists.txt  ProcessStarter.cpp  ProcessStarter.h  SmartCardRemoval.cpp  SmartCardRemoval.idl  SmartCardRemoval.rc  SmartCardRemoval.rgs  SmartCardRemoval.sln  SmartCardRemoval.vcproj  SmartCardRemovalps.def  precompiled.h
esteid-bho/tags/initial_import/: EstEIDSigningPluginBHO.cpp  EstEIDSigningPluginBHO.def  EstEIDSigningPluginBHO_2005.vcproj  Makefile.am  SmartCardSigner.cpp  SmartCardSigner.rgs  dlldata.c
esteid-bho/trunk/: AUTHORS  BHOIEToolsItem.cpp  BHOIEToolsItem.h  BHOIEToolsItem.rgs  CMakeLists.txt  CardMonitorThread.cpp  CardMonitorThread.h  EstEIDSigningBHO.cpp  EstEIDSigningBHO.h  EstEIDSigningBHO.rgs  EstEIDSigningPluginBHO.cpp  EstEIDSigningPluginBHO.def  EstEIDSigningPluginBHO.idl  EstEIDSigningPluginBHO.rc  EstEIDSigningPluginBHO.rgs  EstEIDSigningPluginBHO_2005.vcproj  Setup.h  SmartCardCertificate.cpp  SmartCardCertificate.h  SmartCardCertificate.rgs  SmartCardSigner.cpp  SmartCardSigner.h  SmartCardSigner.rgs  _ISmartCardSignerEvents_CP.h  dlldata.c  dlldatax.c  dllmain.cpp  dllmain.h  precompiled.cpp  precompiled.h  resource.h  test.html  version.rc
esteid-csp/tags/initial_import/: CSPErrors.h  CSPEstEid.h  CSPTypes.cpp  CSPTypes.h  Csp.cpp  Csp_Hash.cpp  Csp_Key.cpp  Makefile.am  RegKey.cpp  Setup.h  csp.def  esteidcsp.rc  precompiled.cpp  utility.h
esteid-csp/trunk/: CMakeLists.txt  CSPErrors.cpp  CSPErrors.h  CSPEstEid.h  CSPTypes.cpp  CSPTypes.h  Csp.cpp  Csp.h  CspEstEid.cpp  Csp_Hash.cpp  Csp_Key.cpp  RegKey.cpp  RegKey.h  Setup.h  csp.def  csp_c_exports.cpp  esteidcsp.cpp  esteidcsp.rc  esteidcsp.vcproj  precompiled.h  premake4.lua  resource.h  utility.h  version.rc
esteid-csp/trunk/csp_tool/: CMakeLists.txt  Makefile.am  csp_tool.cpp  csp_tool.vcproj  precompiled.cpp  premake4.lua
esteid-csp/trunk/utility/: asnObject.cpp  converters.cpp  logger.h  monitorThread.cpp  opensslObj.cpp  opensslObj.h  pinDialog.cpp  pinDialog.h  pkcs11module.h  precompiled.h  premake4.lua  threadObj.cpp  threadObj.h  winInetObj.cpp  winInetObj.h
esteid-csp/trunk/wix/: EsteidCSPWix.wixproj  esteidcsp.wxs
esteid-pkcs11/tags/initial_import/: CMakeLists.txt  PKCS11Context.h  compile_and_link.sh  firefox_debug.txt  precompiled.cpp  premake4.lua
esteid-pkcs11/trunk/: CMakeLists.txt  Makefile.am  PKCS11Context.cpp  PKCS11Context.h  Setup.h  esteidpkcs11.cpp  esteidpkcs11.rc  precompiled.h  premake4.lua  version.rc
esteid-pkcs11/trunk/pkcs11/: pkcs11f.h
id-updater/trunk/: AUTHORS  CMakeLists.txt  InstallChecker.cpp  InstallChecker.h  Makefile.am  ProcessStarter.cpp  ProcessStarter.h  ScheduledUpdateTask.cpp  ScheduledUpdateTask.h  id-updater.pro  id-updater.vcproj  idupdater.cpp  idupdater.h  idupdater.qrc  idupdater.rc  idupdater.ui  idupdater_et.ts  main.cpp  resource.h
libdigidoc++/tags/version_0.0.15/: CMakeLists.txt
libdigidoc++/trunk/src/: ADoc.h  BDoc.cpp  CMakeLists.txt  Conf.h  DDoc.cpp  DDoc_p.h  Document.h  Signature.cpp  Signature.h  SignatureBES.cpp  SignatureBES.h  SignatureMobile.cpp  SignatureMobile.h  SignatureTM.cpp  SignatureTM.h  WDoc.cpp  WDoc.h  XmlConf.cpp  XmlConf.h
libdigidoc/cpp/trunk/: CMakeLists.txt  README.linux  build.bat  build.properties  build.xml
libdigidoc/tags/2.6.0.17/: .digidoc.conf  Makefile.in  README  aclocal.m4  config.h  configure  configure.in  delgenfiles.sh  libdigidoc.pc
libdigidoc/trunk/: AUTHORS  CMakeLists.txt  NEWS  README  libdigidoc.pc.cmake  libdigidoc2.pc.cmake
libdigidoc/trunk/DigiDocServiceClient/: DigiDocService-old.h  DigiDocServiceClient.dsw  DigiDocServiceClient.opt  ddsClient.c
libdigidoc/trunk/doc/: DigiDocLib-2.2.5_eng.sxw  DigiDoci-vorming-1.3.sxw
libdigidoc/trunk/etc/: CMakeLists.txt  digidoc.conf.cmake  ts_cacert.crt  ts_httpserver_ns.crt
libdigidoc2/trunk/: CMakeLists.txt  Makefile  Makefile.am  config.h-old  config.status  libdigidoc.pc.in  libdigidoc.spec
libdigidocpp/trunk/: CMakeLists.txt  NEWS  README  README.linux
libltdl/trunk/: CMakeLists.txt  libltdl.vcproj  ltdl.c
minidriver/trunk/: CMakeLists.txt  esteidcm.cpp  esteidcm.def  esteidcm.h  esteidcm.rc  esteidcm.reg  extra.manifest  notimplemented.cpp  nullstream.h  precompiled.h  resource.h  teststrings.reg  version.h
misc/: README  (+5 more)
misc/pkcs11-helper-test/: CMakeLists.txt  build.bat  test.c
ooo-digidoc/trunk/: CMakeLists.txt  MyBdocBridge.cpp  MyBdocBridge.h  MyListener.cxx
plugins/firefox/: CMakeLists.txt  Makefile  TODO  config.h.cmake  install.rdf  install.rdf.in  run-ff-debug.bat
qdigidoc/trunk/: AUTHORS  CMakeLists.txt  NEWS
qdigidocclient/trunk/: CMakeLists.txt  QDigiDocClient.desktop  build.bat
qdigidoccrypto/trunk/: CMakeLists.txt
qesteidutil/trunk/: CMakeLists.txt  CertificateWidget.cpp  CertificateWidget.h  CertificateWidget.ui  DiagnosticsDialog.h  DiagnosticsDialog.ui  NEWS  QEstEIDUtil.desktop  README  SettingsDialog.cpp  SettingsDialog.ui  SslCertificate.cpp  SslCertificate.h  jscardmanager.cpp  jscardmanager.h  jscertdata.cpp  jscertdata.h  jsesteidcard.cpp  jsesteidcard.h  jsextender.cpp  jsextender.h  main.cpp  mainwindow.cpp  mainwindow.h  qesteidutil.desktop  qesteidutil.pro  qesteidutil.qrc  qesteidutil.rc  sslConnect.cpp  sslConnect.h  ui_pinchangedialog.h
smartcard++/trunk/: CMakeLists.txt  CTAPIManager.cpp  CTAPIManager.h  CardBase.cpp  CardBase.h  DynamicLibrary.cpp  DynamicLibrary.h  ManagerInterface.h  PCSCManager.cpp  PCSCManager.h  SCError.cpp  SCError.h  SmartCardManager.cpp  locked_allocator.cpp  smartcard++.h  smartcardpp.h  test.cpp  types.cpp  types.h
smartcardpp/trunk/: CMakeLists.txt  CTAPIManager.cpp  CTAPIManager.h  CardBase.cpp  CardBase.h  DynamicLibrary.cpp  DynamicLibrary.h  ManagerInterface.h  NEWS  PCSCManager.cpp  PCSCManager.h  PinString.h  SCError.cpp  SCError.h  SmartCardManager.cpp  SmartCardManager.h  common.h  compat_getopt.c  compat_getpass.c  compat_getpass.h  config.h.in  helperMacro.h  internal-pcsc22.h  locked_allocator.cpp  locked_allocator.h  smartcardpp.h  test.cpp  types.cpp  types.h
(+2670 files in other folders)
